--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,8 @@ header {
     justify-content: center;
     background-image:url(../images/nageur.svg),url(../images/ombrelle.svg) ,linear-gradient(to top,#265488, #a7cedd );
     background-repeat: no-repeat, no-repeat;
-    background-size: 50%, 50%;
+    background-size: 50px, 50px, auto;
+    background-position: 5% 50%, 95% 50%;
 
 
 
